Fixed keyboard and calendar don't appear when clicking on DatePicker on mobile

--- a/src/main/frontend/src/components/input/Input.css
+++ b/src/main/frontend/src/components/input/Input.css
@@ -62,6 +62,7 @@
 
 .input-textarea::placeholder {
     font-size: 10px;
+    color: grey;
 }
 
 .input-textareaMini {
@@ -79,6 +80,7 @@
 
 .input-textareaMini::placeholder {
     font-size: 10px;
+    color: grey;
 }
 
 .input-radioContainer {
@@ -147,4 +149,5 @@
 
 .input-datePicker::placeholder {
     font-size: 10px;
+    color: grey;
 }
